--- a/home_credit_prediction.ipynb
+++ b/home_credit_prediction.ipynb
@@ -621,22 +621,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ext_data=new_data[['EXT_SOURCE_1','EXT_SOURCE_2','EXT_SOURCE_3','AMT_INCOME_TOTAL','CNT_CHILDREN','AMT_CREDIT','AMT_ANNUITY',\n",
+    "ext_data=data[['EXT_SOURCE_1','EXT_SOURCE_2','EXT_SOURCE_3','AMT_INCOME_TOTAL','CNT_CHILDREN','AMT_CREDIT','AMT_ANNUITY',\n",
     "                  'AMT_GOODS_PRICE','AMT_REQ_CREDIT_BUREAU_YEAR','AMT_REQ_CREDIT_BUREAU_DAY','AMT_REQ_CREDIT_BUREAU_WEEK',\n",
     "                  'AMT_REQ_CREDIT_BUREAU_MON']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.pairplot(ext_data,size=2.5)"
    ]
   },
   {
